--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
               sans: ['Quicksand', 'sans-serif'],
               display: ['Poppins', 'sans-serif'],
               signature: ['Dancing Script', 'cursive'],
+            },
+            animation: {
+              'float': 'float 6s ease-in-out infinite',
+            },
+            keyframes: {
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-20px)' },
+              }
             }
           }
         }
