--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Neide Borges | Confeitaria Artesanal</title>
     <meta name="description" content="Encomende bolos artesanais feitos com amor por Neide Borges. Sabores incríveis para sua festa." />
     
+    <!-- Security Meta Tags -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
